src/antlr/src/antlr/SimplifyParser.java
// Generated from src/antlr/Simplify.g4 by ANTLR 4.13.2
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class SimplifyParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, Cond_If=12, Cond_Else=13, Cond_Or=14, F_Loop=15, W_Loop=16, 
		Func=17, Class=18, StrMethod=19, ArrMethod=20, DictMethod=21, Str=22, 
		Num=23, Dec=24, Bool=25, Arr=26, Dict=27, Output=28, Input=29, Exist=30, 
		To=31, Return=32, Size=33, True=34, False=35, ID=36, Number=37, Decimal=38, 
		String=39, Ws=40, SEMI=41, EQ=42, NE=43, GT=44, GE=45, LT=46, LE=47, ASSIGN=48, 
		MUL=49, DIV=50, PLUS=51, MINUS=52, AND=53, OR=54, SingleLineComment=55, 
		MultiLineComment=56;
	public static final int
		RULE_program = 0, RULE_comments = 1, RULE_statement = 2, RULE_innerStatement = 3, 
		RULE_type = 4, RULE_declaration = 5, RULE_assignment = 6, RULE_expression = 7, 
		RULE_methodName = 8, RULE_compOp = 9, RULE_boolOp = 10, RULE_conditional = 11, 
		RULE_ifBlock = 12, RULE_orBlock = 13, RULE_elseBlock = 14, RULE_loop = 15, 
		RULE_forLoop = 16, RULE_whileLoop = 17, RULE_block = 18, RULE_funcExpr = 19, 
		RULE_function = 20, RULE_argumentList = 21, RULE_argument = 22, RULE_returnStatement = 23, 
		RULE_classInit = 24, RULE_classProperty = 25, RULE_result = 26, RULE_readInputExpr = 27;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "comments", "statement", "innerStatement", "type", "declaration", 
			"assignment", "expression", "methodName", "compOp", "boolOp", "conditional", 
			"ifBlock", "orBlock", "elseBlock", "loop", "forLoop", "whileLoop", "block", 
			"funcExpr", "function", "argumentList", "argument", "returnStatement", 
			"classInit", "classProperty", "result", "readInputExpr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'['", "']'", "'.'", "'('", "')'", "':'", "'[]'", "','", "'{}'", 
			"'{'", "'}'", "'if'", "'else'", "'or'", "'f_loop'", "'w_loop'", "'func'", 
			"'class'", "'length'", null, null, "'str'", "'num'", "'dec'", "'bool'", 
			"'arr'", "'dict'", "'result'", "'readInput'", "'exist'", "'to'", "'return'", 
			"'size'", "'True'", "'False'", null, null, null, null, null, "';'", "'=='", 
			"'!='", "'>'", "'>='", "'<'", "'<='", null, "'*'", "'/'", "'+'", "'-'", 
			"'&'", "'|'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"Cond_If", "Cond_Else", "Cond_Or", "F_Loop", "W_Loop", "Func", "Class", 
			"StrMethod", "ArrMethod", "DictMethod", "Str", "Num", "Dec", "Bool", 
			"Arr", "Dict", "Output", "Input", "Exist", "To", "Return", "Size", "True", 
			"False", "ID", "Number", "Decimal", "String", "Ws", "SEMI", "EQ", "NE", 
			"GT", "GE", "LT", "LE", "ASSIGN", "MUL", "DIV", "PLUS", "MINUS", "AND", 
			"OR", "SingleLineComment", "MultiLineComment"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Simplify.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SimplifyParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(SimplifyParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimplifyListener ) ((SimplifyListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimplifyListener ) ((SimplifyListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(56);
				statement();
				}
				}
				setState(59); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 108087474458695314L) != 0) );
			setState(61);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CommentsContext extends ParserRuleContext {
		public TerminalNode SingleLineComment() { return getToken(SimplifyParser.SingleLineComment, 0); }
		public TerminalNode MultiLineComment() { return getToken(SimplifyParser.MultiLineComment, 0); }
		public CommentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comments; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimplifyListener ) ((SimplifyListener)listener).enterComments(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimplifyListener ) ((SimplifyListener)listener).exitComments(this);
		}
	}

	public final CommentsContext comments() throws RecognitionException {
		CommentsContext _localctx = new CommentsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_comments);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			_la = _input.LA(1);
			if ( !(_la==SingleLineComment || _la==MultiLineComment) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public ClassInitContext classInit() {
			return getRuleContext(ClassInitContext.class,0);
		}
		public InnerStatementContext innerStatement() {
			return getRuleContext(InnerStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimplifyListener ) ((SimplifyListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimplifyListener ) ((SimplifyListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(68);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Func:
				enterOuterAlt(_localctx, 1);
				{
				setState(65);
				function();
				}
				break;
			case Class:
				enterOuterAlt(_localctx, 2);
				{
				setState(66);
				classInit();
				}
				break;
			case T__0:
			case T__3:
			case T__6:
			case T__8:
			case T__9:
			case Cond_If:
			case F_Loop:
			case W_Loop:
			case Str:
			case Num:
			case Dec:
			case Bool:
			case Arr:
			case Dict:
			case Output:
			case Input:
			case True:
			case False:
			case ID:
			case Number:
			case Decimal:
			case String:
			case SingleLineComment:
			case MultiLineComment:
				enterOuterAlt(_localctx, 3);
				{
				setState(67);
				innerStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InnerStatementContext extends ParserRuleContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public CommentsContext comments() {
			return getRuleContext(CommentsContext.class,0);
		}
		public ConditionalContext conditional() {
			return getRuleContext(ConditionalContext.class,0);
		}
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public LoopContext loop() {
			return getRuleContext(LoopContext.class,0);
		}
		public ResultContext result() {
			return getRuleContext(ResultContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(SimplifyParser.SEMI, 0); }
		public InnerStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_innerStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimplifyListener ) ((SimplifyListener)listener).enterInnerStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimplifyListener ) ((SimplifyListener)listener).exitInnerStatement(this);
		}
	}

	public final InnerStatementContext innerStatement() throws RecognitionException {
		InnerStatementContext _localctx = new InnerStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_innerStatement);
		try {
			setState(79);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(70);
				assignment();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(71);
				comments();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(72);
				conditional();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(73);
				declaration();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(74);
				loop();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(75);
				result();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(76);
				expression(0);
				setState(77);
				match(SEMI);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeContext extends ParserRuleContext {
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	 
		public TypeContext() { }
		public void copyFrom(TypeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DecTypeContext extends TypeContext {
		public TerminalNode Dec() { return getToken(SimplifyParser.Dec, 0); }
		public DecTypeContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimplifyListener ) ((SimplifyListener)listener).enterDecType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimplifyListener ) ((SimplifyListener)listener).exitDecType(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ArrTypeContext extends TypeContext {
		public TerminalNode Arr() { return getToken(SimplifyParser.Arr, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ArrTypeContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimplifyListener ) ((SimplifyListener)listener).enterArrType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimplifyListener ) ((SimplifyListener)listener).exitArrType(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class BoolTypeContext extends TypeContext {
		public TerminalNode Bool() { return getToken(SimplifyParser.Bool, 0); }
		public BoolTypeContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimplifyListener ) ((SimplifyListener)listener).enterBoolType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimplifyListener ) ((SimplifyListener)listener).exitBoolType(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NumTypeContext extends TypeContext {
		public TerminalNode Num() { return getToken(SimplifyParser.Num, 0); }
		public NumTypeContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimplifyListener ) ((SimplifyListener)listener).enterNumType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimplifyListener ) ((SimplifyListener)listener).exitNumType(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DictTypeContext extends TypeContext {
		public TerminalNode Dict() { return getToken(SimplifyParser.Dict, 0); }
		public DictTypeContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimplifyListener ) ((SimplifyListener)listener).enterDictType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimplifyListener ) ((SimplifyListener)listener).exitDictType(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StrTypeContext extends TypeContext {
		public TerminalNode Str() { return getToken(SimplifyParser.Str, 0); }
		public StrTypeContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimplifyListener ) ((SimplifyListener)listener).enterStrType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimplifyListener ) ((SimplifyListener)listener).exitStrType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_type);
		try {
			setState(91);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Str:
				_localctx = new StrTypeContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(81);
				match(Str);
				}
				break;
			case Num:
				_localctx = new NumTypeContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(82);
				match(Num);
				}
				break;
			case Dec:
				_localctx = new DecTypeContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(83);
				match(Dec);
				}
				break;
			case Bool:
				_localctx = new BoolTypeContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(84);
				match(Bool);
				}
				break;
			case Arr:
				_localctx = new ArrTypeContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(85);
				match(Arr);
				setState(86);
				match(T__0);
				setState(87);
				type();
				setState(88);
				match(T__1);
				}
				break;
			case Dict:
				_localctx = new DictTypeContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(90);
				match(Dict);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(SimplifyParser.ID, 0); }
		public TerminalNode SEMI() { return getToken(SimplifyParser.SEMI, 0); }
		public TerminalNode ASSIGN() { return getToken(SimplifyParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimplifyListener ) ((SimplifyListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimplifyListener ) ((SimplifyListener)listener).exitDeclaration(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			type();
			setState(94);
			match(ID);
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ASSIGN) {
				{
				setState(95);
				match(ASSIGN);
				setState(96);
				expression(0);
				}
			}

			setState(99);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignmentContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(SimplifyParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(SimplifyParser.ASSIGN, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode SEMI() { return getToken(SimplifyParser.SEMI, 0); }
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimplifyListener ) ((SimplifyListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimplifyListener ) ((SimplifyListener)listener).exitAssignment(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_assignment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(ID);
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(102);
				match(T__0);
				setState(103);
				expression(0);
				setState(104);
				match(T__1);
				}
			}

			setState(108);
			match(ASSIGN);
			setState(109);
			expression(0);
			setState(110);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	 
		public ExpressionContext() { }
		public void copyFrom(ExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AddDictItemExprContext extends ExpressionContext {
		public TerminalNode String() { return getToken(SimplifyParser.String, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AddDictItemExprContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimplifyListener ) ((SimplifyListener)listener).enterAddDictItemExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimplifyListener ) ((SimplifyListener)listener).exitAddDictItemExpr(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CompOpExprContext extends ExpressionContext {
		public ExpressionContext left;
		public ExpressionContext right;
		public CompOpContext compOp() {
			return getRuleContext(CompOpContext.class,0);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public CompOpExprContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimplifyListener ) ((SimplifyListener)listener).enterCompOpExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimplifyListener ) ((SimplifyListener)listener).exitCompOpExpr(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class EmptyArrExprContext extends ExpressionContext {
		public EmptyArrExprContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimplifyListener ) ((SimplifyListener)listener).enterEmptyArrExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimplifyListener ) ((SimplifyListener)listener).exitEmptyArrExpr(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DecimalExprContext extends ExpressionContext {
		public TerminalNode Decimal() { return getToken(SimplifyParser.Decimal, 0); }
		public DecimalExprContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimplifyListener ) ((SimplifyListener)listener).enterDecimalExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimplifyListener ) ((SimplifyListener)listener).exitDecimalExpr(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TrueExprContext extends ExpressionContext {
		public TerminalNode True() { return getToken(SimplifyParser.True, 0); }
		public TrueExprContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimplifyListener ) ((SimplifyListener)listener).enterTrueExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimplifyListener ) ((SimplifyListener)listener).exitTrueExpr(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NumberExprContext extends ExpressionContext {
		public TerminalNode Number() { return getToken(SimplifyParser.Number, 0); }
		public NumberExprContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimplifyListener ) ((SimplifyListener)listener).enterNumberExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimplifyListener ) ((SimplifyListener)listener).exitNumberExpr(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class BoolOpExprContext extends ExpressionContext {
		public ExpressionContext left;
		public ExpressionContext right;
		public BoolOpContext boolOp() {
			return getRuleContext(BoolOpContext.class,0);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public BoolOpExprContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimplifyListener ) ((SimplifyListener)listener).enterBoolOpExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimplifyListener ) ((SimplifyListener)listener).exitBoolOpExpr(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ReadExprContext extends ExpressionContext {
		public ReadInputExprContext readInputExpr() {
			return getRuleContext(ReadInputExprContext.class,0);
		}
		public ReadExprContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimplifyListener ) ((SimplifyListener)listener).enterReadExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimplifyListener ) ((SimplifyListener)listener).exitReadExpr(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class EmptyDictExprContext extends ExpressionContext {
		public EmptyDictExprContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
